--- a/estilog.css
+++ b/estilog.css
@@ -182,6 +182,13 @@ footer{
     height: 100%;
     flex-shrink: 2;
 }
+.imagen .img2{
+    width: 1280px;
+    height: 100%;
+    max-width: 100%;
+    max-height: 100%;
+    border: 7px solid;
+}
 .imagen img{
     width: 500px;
     height: 100%;
